force-app/main/default/objects/Quote/fields/Actual_Comparison_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Comparison_Rate__c</fullName>
    <label>Comparison Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>