force-app/main/default/objects/Quote/fields/Affordability_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Affordability_Confirmation__c</fullName>
    <label>Affordability Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>