force-app/main/default/objects/Quote/fields/Applicant_1_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Full_Name__c</fullName>
    <formula>Opportunity.Applicant_1__r.FirstName &amp; &apos; &apos; &amp; Opportunity.Applicant_1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 1 Full Name</label>
    <type>Text</type>
</CustomField>