force-app/main/default/objects/Quote/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application</label>
    <type>Checkbox</type>
</CustomField>