force-app/main/default/objects/Quote/fields/Commission_Description__c.field-meta.xml
<CustomField>
    <fullName>Commission_Description__c</fullName>
    <formula>Product__r.Commission_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Description</label>
    <type>Text</type>
</CustomField>