force-app/main/default/objects/Quote/fields/Commission_Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Override_Amount__c</fullName>
    <label>Commission Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>