force-app/main/default/objects/Quote/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <formula>TEXT(Product__r.Commission_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Type</label>
    <type>Text</type>
</CustomField>