force-app/main/default/objects/Quote/fields/Comparison_Rate_Display__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Rate_Display__c</fullName>
    <formula>Product__r.Comparison_Rate_Display__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comparison Rate Display</label>
    <type>Text</type>
</CustomField>