force-app/main/default/objects/Quote/fields/Credit_Available_after_Setup_Costs__c.field-meta.xml
<CustomField>
    <fullName>Credit_Available_after_Setup_Costs__c</fullName>
    <label>Credit Available after Setup Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>