force-app/main/default/objects/Quote/fields/Customer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Amount__c</fullName>
    <label>Customer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>