force-app/main/default/objects/Quote/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Account</label>
    <type>Checkbox</type>
</CustomField>