force-app/main/default/objects/Quote/fields/Fortnightly_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Fortnightly_Repayments__c</fullName>
    <formula>Monthly_Repayment__c *12/26</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fortnightly Repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>