force-app/main/default/objects/Quote/fields/Gruop_Name__c.field-meta.xml
<CustomField>
    <fullName>Gruop_Name__c</fullName>
    <label>Gruop Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>