force-app/main/default/objects/Quote/fields/Interest_Rate_From__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_From__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Rate From</label>
    <type>Checkbox</type>
</CustomField>