force-app/main/default/objects/Quote/fields/Interest_Rate_Override__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Override__c</fullName>
    <label>Interest Rate Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>