force-app/main/default/objects/Quote/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <label>Lender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>