force-app/main/default/objects/Quote/fields/Master_Quote_For_URL__c.field-meta.xml
<CustomField>
    <fullName>Master_Quote_For_URL__c</fullName>
    <formula>SUBSTITUTE(Gruop_Name__c, &apos;&amp;&apos;, &apos;%26&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Quote For URL</label>
    <type>Text</type>
</CustomField>