force-app/main/default/objects/Quote/fields/Min_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Min_Loan_Term__c</fullName>
    <label>Min Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>