force-app/main/default/objects/Quote/fields/Monthly_Account_Keeping_Fees__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Account_Keeping_Fees__c</fullName>
    <label>Monthly Account Keeping Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>