force-app/main/default/objects/Quote/fields/Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Repayment__c</fullName>
    <formula>CEILING(((((Interest_Rate__c/12) * Total_loan_amount__c) * ((1 + (Interest_Rate__c/12))^Loan_Term__c)) / ((1 + (Interest_Rate__c/12))^Loan_Term__c - 1))+ Monthly_Account_Keeping_Fees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ceiling Monthly Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>