force-app/main/default/objects/Quote/fields/Monthly_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Repayments__c</fullName>
    <formula>((((Interest_Rate__c/12) * Total_loan_amount__c) * ((1 + (Interest_Rate__c/12))^Loan_Term__c)) / ((1 + (Interest_Rate__c/12))^Loan_Term__c - 1))+ Monthly_Account_Keeping_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>