force-app/main/default/objects/Quote/fields/Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Applicable</label>
    <type>Checkbox</type>
</CustomField>