force-app/main/default/objects/Quote/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <formula>Opportunity.OppID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>