force-app/main/default/objects/Quote/fields/ORG_URL__c.field-meta.xml
<CustomField>
    <fullName>ORG_URL__c</fullName>
    <formula>&apos;https://apply-parkerlane.secure.force.com/&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORG URL</label>
    <type>Text</type>
</CustomField>