force-app/main/default/objects/Quote/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lowest Rate</fullName>
            </value>
            <value>
                <fullName>Lowest Repayment</fullName>
            </value>
            <value>
                <fullName>Lowest Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>