force-app/main/default/objects/Quote/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>