force-app/main/default/objects/Quote/fields/Quote_Group_Label__c.field-meta.xml
<CustomField>
    <fullName>Quote_Group_Label__c</fullName>
    <label>Quote Group Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>