force-app/main/default/objects/Quote/fields/Repayment_Frequency_Options__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Frequency_Options__c</fullName>
    <label>Repayment Frequency Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Interest in Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>