force-app/main/default/objects/Quote/fields/Shared_Message__c.field-meta.xml
<CustomField>
    <fullName>Shared_Message__c</fullName>
    <label>Shared Message</label>
    <type>TextArea</type>
</CustomField>