force-app/main/default/objects/Quote/fields/SQ_Referral_Commission__c.field-meta.xml
<CustomField>
    <fullName>SQ_Referral_Commission__c</fullName>
    <formula>Commission_Amount__c  * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SQ Referral Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>