force-app/main/default/objects/Quote/fields/Total_Income_Inc_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Income_Inc_GST__c</fullName>
    <formula>Commission_Amount__c + Brokerage_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Income Inc GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>