force-app/main/default/objects/Quote/fields/Total_loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_loan_amount__c</fullName>
    <formula>Customer_Amount__c + IF( ISPICKVAL( Up_Front_Costs_Applicable__c , &apos;Yes&apos;) , Total_Setup_Fees__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total loan amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>