force-app/main/default/objects/Quote/fields/Total_Loan_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Cost__c</fullName>
    <description>IF( ISPICKVAL( Up_Front_Costs_Applicable__c ,&apos;Yes&apos;) ,(Monthly_Repayments__c *  Loan_Term__c), ((Monthly_Repayments__c *  Loan_Term__c)+ Up_Front_Fees__c ))</description>
    <formula>IF( ISPICKVAL( Up_Front_Costs_Applicable__c ,&apos;Yes&apos;), (Monthly_Repayments__c *  Loan_Term__c) , ((Monthly_Repayments__c *  Loan_Term__c)+ Up_Front_Fees__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Loan Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>