force-app/main/default/objects/Quote/fields/Total_Setup_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Setup_Fees__c</fullName>
    <formula>Brokerage_Amount__c + Up_Front_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Setup Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>