force-app/main/default/objects/Quote/fields/Up_Front_Costs_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Up_Front_Costs_Applicable__c</fullName>
    <label>Up Front Costs Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>