force-app/main/default/objects/Quote/fields/Up_Front_Fees__c.field-meta.xml
<CustomField>
    <fullName>Up_Front_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Up Front Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>