force-app/main/default/objects/Quote/fields/Weekly_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Repayments__c</fullName>
    <formula>Monthly_Repayment__c * 12 /52</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>