force-app/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CreatedBy</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Lender__c</columns>
    <columns>Total_Setup_Fees__c</columns>
    <columns>Customer_Amount__c</columns>
    <columns>Total_loan_amount__c</columns>
    <columns>Total_Fees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>